# pretty-dope-fileviewer

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_refactored.cpp  navigationcontroller.cpp  navigationcontroller.h  pagemanager.cpp  pagemanager.h  pdfdocument.cpp  pdfdocument.h  pdfpage.cpp  pdfpage.h  pdfviewer.cpp  pdfviewer.h  resources.qrc  zoomcontroller.cpp  zoomcontroller.h
